2014-11-03  Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/60770
	* gcc.dg/tree-ssa/pr60770-1.c: New file.

2014-11-03  Jan Beulich  <jbeulich@suse.com>

	* gcc.target/i386/i386.exp: Extend option set to test
	vect-args.c with to include -mavx, -mavx2, and -mavx512f.
	* gcc.target/i386/vect-args.c: Add AVX* modes and tests.

2014-11-03  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.c-torture/execute/20010129-1.c: Compile with -mtune=i686
	for ia32 targets only.
	* g++.dg/ext/attrib42.C: Compile for ia32 targets only.
	* g++.dg/tree-ssa/pr29902.C: Ditto.
	* g++.dg/cpp0x/gen-attrs-42.C: Ditto.

2014-11-03  Zhenqiang Chen  <zhenqiang.chen@arm.com>

	* gcc.target/arm/ifcvt-size-check.c: New test.

2014-11-03  Naveen H.S  <Naveen.Hurugalawadi@caviumnetworks.com>

	* gcc.target/mips/octeon3-pipe-1.c: New test.

2014-11-02  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/cpp0x/gen-attrs-42.C: Add x86_64-*-* target.
	* g++.dg/ext/attrib42.C: Ditto.
	* g++.dg/torture/pr51344.C: Ditto.
	* g++.dg/tree-ssa/pr29902.C: Ditto.
	* gcc.c-torture/execute/20010129-1.c: Ditto.
	* gcc.dg/combine_ashiftrt_2.c: Ditto.
	* gcc.dg/march-generic.c: Ditto.
	* gcc.dg/torture/pr17526.c: Ditto.
	* gcc.dg/union-4.c: Ditto.

2014-11-02  Uros Bizjak  <ubizjak@gmail.com>

	* c-c++-common/ubsan/float-cast-overflow-6.c: Add i?86-*-* target.
	* g++.dg/abi/no-weak1.C: Ditto.
	* g++.dg/opt/pr44919.C: Ditto.
	* g++.dg/opt/pr46640.C: Ditto.
	* g++.dg/opt/pr46649.C: Ditto.
	* g++.dg/opt/pr47036.C: Ditto.
	* g++.dg/opt/pr48273.C: Ditto.
	* g++.dg/opt/pr48302.C: Ditto.
	* g++.dg/opt/pr45788.C: Ditto.
	* g++.dg/opt/pr57662.C: Ditto.
	* gcc.dg/20031102-1.c: Ditto.
	* gcc.dg/builtin-bswap-7.c: Ditto.
	* gcc.dg/builtin-bswap-7a.c: Ditto.
	* gcc.dg/builtin-bswap-9.c: Ditto.
	* gcc.dg/combine_ashiftrt_1.c: Ditto.
	* gcc.dg/guality/bswaptest.c: Ditto.
	* gcc.dg/guality/clztest.c: Ditto.
	* gcc.dg/guality/ctztest.c: Ditto.
	* gcc.dg/guality/pr45003-1.c: Ditto.
	* gcc.dg/guality/pr45003-2.c: Ditto.