@@ -1,3 +1,9 @@
+2014-11-03  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/57820
+	* g++.dg/cpp0x/constexpr-ctor16.C: New.
+	* g++.dg/cpp0x/constexpr-ctor17.C: Likewise.
+
 2014-11-03  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR tree-optimization/60770
